# elio-growth

./: Andre-measured-weight.csv  Elio-measured-weight.csv  Elio-measured-weight.tsv  Growth Calculator.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Growth Calculator-checkpoint.ipynb
stats/: WHO-boys-head-table.csv  WHO-boys-length-table.csv  WHO-girls-head-table.csv  WHO-girls-length-table.csv  WHO-girls-weight-table.csv
stats/.ipynb_checkpoints/: WHO-boys-weight-table-checkpoint.csv
